--- a/Frontend/apps/admin/src/app/pages/update-lesson/update-lesson.component.html
+++ b/Frontend/apps/admin/src/app/pages/update-lesson/update-lesson.component.html
@@ -7,3 +7,8 @@
   (cancelFn)="cancel()"
 >
 </app-lesson-form>
+
+<app-paragraphs
+  [paragraphs]="lessonResponse.paragraphs"
+  (updated)="updatedParagraphs($event)"
+></app-paragraphs>
