Add new backend logic

--- a/Frontend/apps/admin/src/app/components/update-user-info/update-user-info.component.html
+++ b/Frontend/apps/admin/src/app/components/update-user-info/update-user-info.component.html
@@ -52,7 +52,10 @@
     <span class="w-[20%]">Ngày sinh:</span>
     <div class="w-[70%]">
       <input
-        libFlatpickr
+        [libFlatpickr]="{
+          mode: 'date',
+          defaultDate: userInfoForm.get('dateOfBirth')?.value
+        }"
         type="text"
         formControlName="dateOfBirth"
         [ngClass]="{
