--- a/Frontend/apps/admin/src/app/components/navbar/navbar.component.html
+++ b/Frontend/apps/admin/src/app/components/navbar/navbar.component.html
@@ -37,23 +37,44 @@
       <!-- Navigation -->
       <nav class="flex flex-col items-start text-white text-lg">
         @for (item of navItems; track $index) {
-          <div class="w-full">
-            <a
-              #itemRef
-              class="relative flex items-center w-full py-2 px-4 hover:bg-white/10 transition-all duration-300"
-              [routerLink]="item.route"
-              [ngClass]="{ 'bg-blue-400': isInRoute(item, router.url) }"
-              (mouseenter)="showTooltip(item.name, itemRef)"
-              (mouseleave)="hideTooltip()"
-            >
-              <ng-icon [name]="item.icon" class="text-white mr-3 min-w-[24px]" size="24"/>
-              <span
-                class="transition-all duration-300 ease-in-out overflow-hidden whitespace-nowrap"
-                [ngClass]="isCollapsed ? 'opacity-0 w-0' : 'opacity-100 w-auto'">
+          @if (!item.accessOnly) {
+            <div class="w-full">
+              <a
+                #itemRef
+                class="relative flex items-center w-full py-2 px-4 hover:bg-white/10 transition-all duration-300"
+                [routerLink]="item.route"
+                [ngClass]="{ 'bg-blue-400': isInRoute(item, router.url) }"
+                (mouseenter)="showTooltip(item.name, itemRef)"
+                (mouseleave)="hideTooltip()"
+              >
+                <ng-icon [name]="item.icon" class="text-white mr-3 min-w-[24px]" size="24"/>
+                <span
+                  class="transition-all duration-300 ease-in-out overflow-hidden whitespace-nowrap"
+                  [ngClass]="isCollapsed ? 'opacity-0 w-0' : 'opacity-100 w-auto'">
                 {{ item.name }}
               </span>
-            </a>
-          </div>
+              </a>
+            </div>
+
+          } @else if (item.accessOnly.includes(fullRole)) {
+            <div class="w-full">
+              <a
+                #itemRef
+                class="relative flex items-center w-full py-2 px-4 hover:bg-white/10 transition-all duration-300"
+                [routerLink]="item.route"
+                [ngClass]="{ 'bg-blue-400': isInRoute(item, router.url) }"
+                (mouseenter)="showTooltip(item.name, itemRef)"
+                (mouseleave)="hideTooltip()"
+              >
+                <ng-icon [name]="item.icon" class="text-white mr-3 min-w-[24px]" size="24"/>
+                <span
+                  class="transition-all duration-300 ease-in-out overflow-hidden whitespace-nowrap"
+                  [ngClass]="isCollapsed ? 'opacity-0 w-0' : 'opacity-100 w-auto'">
+                {{ item.name }}
+              </span>
+              </a>
+            </div>
+          }
         }
       </nav>
     </div>
