--- a/Frontend/apps/admin/src/app/components/table/table.component.html
+++ b/Frontend/apps/admin/src/app/components/table/table.component.html
@@ -81,7 +81,7 @@
             </td>
             <td class="px-4 py-3">
               <div class="flex items-center space-x-2">
-                @for (action of actionButtonConfigs; track $index) {
+                @for (action of resolvedActions[item.id]; track action.name) {
                   <lib-action-button
                     *ngIf="action.title !== undefined && action.mainTitle !== undefined"
                     [name]="action.name"
