--- a/Frontend/apps/admin/src/app/pages/accounts/accounts.component.html
+++ b/Frontend/apps/admin/src/app/pages/accounts/accounts.component.html
@@ -32,9 +32,9 @@
         </app-sort>
         <lib-action-button
           [name]="ActionButtonName.Add"
-          mainTitle="Thêm mới"
+          mainTitle="Đăng ký QTV"
           title=""
-          (btnClick)="goToAddUserPage()"
+          (btnClick)="goToAddAdminPage()"
         ></lib-action-button>
       </div>
     </div>
