--- a/Frontend/apps/learner/src/app/pages/reset-password/reset-password.component.html
+++ b/Frontend/apps/learner/src/app/pages/reset-password/reset-password.component.html
@@ -166,9 +166,7 @@
           @if (resetPassowordFH.isInvalid('confirmNewPassword')) {
             @if (resetPassowordFH.hasError('confirmNewPassword', 'required')) {
               <p class="error">{{ userMessages.CONFIRM_NEW_PASSWORD__REQUIRED }}</p>
-            } @else if (resetPassowordFH.hasError('confirmNewPassword', 'pattern') ||
-            resetPassowordFH.hasError('confirmNewPassword', 'minlength') ||
-            resetPassowordFH.hasError('confirmNewPassword', 'maxlength')) {
+            } @else if (resetPasswordForm.get('confirmNewPassword')?.value !== resetPasswordForm.get('newPassword')?.value) {
               <p class="error">{{ userMessages.CONFIRM_NEW_PASSWORD__INVALID }}</p>
             }
           }
